<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:checkable="true"/>

    <item
        android:id="@+id/action_favs"
        android:title="@string/action_favs"
        android:icon="@drawable/ic_favs"
        android:checkable="true"/>

    <item
        android:id="@+id/action_cart"
        android:title="@string/action_cart"
        android:icon="@drawable/ic_cart"
        android:checkable="true"/>

    <item
        android:id="@+id/generos"
        android:title="@string/genre">
        <menu>
            <item
                android:id="@+id/gen_misterio"
                android:title="@string/radio_button1"
                android:checkable="true" />
            <item
                android:id="@+id/gen_historia"
                android:title="@string/radio_button2"
                android:checkable="true" />
            <item
                android:id="@+id/gen_poesia"
                android:title="@string/radio_button3"
                android:checkable="true" />
            <item
                android:id="@+id/gen_terror"
                android:title="@string/radio_button4"
                android:checkable="true" />
        </menu>
    </item>

</menu>
