<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onPrimary"
    android:id="@+id/main">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textapp"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/md_theme_primary"
                android:fontFamily="@font/yellowtail_regular"
                android:textSize="89sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_genero"
                android:textStyle="bold"
                android:textColor="@color/md_theme_secondary"
                android:layout_gravity="center_horizontal" />

            <RadioGroup android:id="@+id/RadioG1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radiob1"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:text="@string/radio_button1" />

                <RadioButton
                    android:id="@+id/radiob2"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:text="@string/radio_button2" />

                <RadioButton
                    android:id="@+id/radiob3"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:text="@string/radio_button3" />

                <RadioButton
                    android:id="@+id/radiob4"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:text="@string/radio_button4"/>

            </RadioGroup>

            <Button
                android:id="@+id/explorar"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/md_theme_onPrimaryContainer"
                android:text="@string/explorar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>